Fix blocks collapsed into curriculum html file

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,7 @@
 *{
   box-sizing: border-box;
 }
+
 body{
   width: 90%;
   height:65%;
@@ -18,7 +19,7 @@ body , aside {
 /* index file  */
 
 header{
-  margin-right:20%;
+  margin-right:20%
   font-family: Helvetica, Verdana, Arial, sans-serif;
 }
 .connect img{
@@ -45,8 +46,8 @@ nav ul li{
 
 .wrap{
   display: "flex";
-  margin :0 auto;
-  padding-left: 20px;
+  margin :1% auto;
+  padding-left: 5px 10px;
 }
 h1{
   font-family: "Sofia";
@@ -221,3 +222,32 @@ font-family:
 
 
 /*------------------------ Media queries */
+
+@media(max-width: 665px){
+   .foot{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .foot li{
+    margin: 2px;
+  }
+}
+@media(max-width: 530px){
+   .navFile{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .navFile li{
+    text-align: center;
+      margin: 2px;
+  }
+}
+@media(max-width: 573px){
+    .connect img{
+    width: 300px;
+    height: 200px;
+  }
+
+}
